# recipe-ms

./: .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md
recipe_manager/: README.md  app.py  config.py  models.py  pyproject.toml  recipes.db  requirements.txt  schema.sql  wsgi.py
recipe_manager/routes/: __init__.py  recipes.py
recipe_manager/static/: style.css
recipe_manager/templates/: base.html  index.html  recipe_detail.html  recipe_form.html  recipe_list.html  recipe_search.html
