[tool.poetry]
name = "recipe-manager"
version = "0.1.0"
description = "A web-based recipe management system built with Flask and SQLite"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.0"
Jinja2 = "^3.1.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
